--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,8 @@
 <ion-footer>
-  <ion-toolbar color="dark">
-    <div class="text-white blur" routerLink="/roy" routerDirection="root">
-      <ion-icon color="white" name="rose"></ion-icon>&nbsp;&nbsp;&nbsp;לזכרו של יקירנו רועי מינץ ז"ל</div>
+  <ion-toolbar color="darker">
+    <ion-button fill="clear" expand="block" size="small" color="white" [routerLink]="'/roy'" routerDirection="root">
+      <ion-icon slot="start" color="white" name="rose"></ion-icon>
+      לזכרו של יקירנו רועי מינץ ז"ל
+    </ion-button>
   </ion-toolbar>
 </ion-footer>
