--- a/src/app/pages/roy/roy.page.html
+++ b/src/app/pages/roy/roy.page.html
@@ -1,9 +1,38 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>roy</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-navbar [navTitle]="'רועי'" [accBtn]="false" [shareBtn]="false"></app-navbar>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <ion-card>
+    <ion-card-content>
+      <br>
+      <p>רועי, בן לעליזה ולאריה, אח לשיר, רן וחן, נולד בירושלים וגדל ברחובות. למרות זאת, בשבילנו הוא תמיד היה ונחשב כבאר
+        שבעי
+        מלידה. עם נישואיו לעינב הפך רועי רשמית לאחד מהחבר'ה (שבט שלם, בני עקיבא
+        <ion-icon name="happy-outline"></ion-icon>). יחד עם אשתו עינב נשארו לגור בבאר שבע וגידלו את ילדיהם: עמיחי, טליה, גלעד
+        ומיכל.</p>
+      <br>
+      <p>בשנים האחרונות לרועי היה מנהג מבורך לתזכר את החבר'ה בקבוצת הוואטסאפ בספירת העומר. בכל יום התקבלה ממנו תזכורת
+        יומית
+        ובזכותו חלקנו זכינו לספור את כל 49 הימים, וחלקנו למרות התזכורות הקבועות, הצלחנו לפספס... תקוותנו שהשימוש
+        באפליקציה
+        יבטיח ספירה שלמה לכל המשתמשים.</p>
+      <br>
+      <p>רועי בן 35, נפטר תוך זמן קצר ממחלת הסרטן, לאורך כל תקופת המחלה הסתובב עם חיוך על הפנים ואופטימיות מדבקת והמשיך
+        לחיות
+        את חייו לצד המחלה. הוא לימד את כולנו שיעור גדול באמונה, דבקות שמחה ואופטימיות.</p>
+      <br>
+      <p>כדי שגם השנה רועי, תזכה אותנו בספירת העומר, האפליקציה לזכרך.</p>
+      <br>
+      <p text-center>
+        <ion-chip>
+          <ion-avatar>
+            <div class="fapBtn">&nbsp;</div>
+          </ion-avatar>
+          <ion-label>אז צדיק! עומר? כבר ספרת?
+            <span *ngIf="!plt.is('iphone')">סופרים וזוכרים..</span>&nbsp;&nbsp;</ion-label>
+        </ion-chip>
+      </p>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
+<app-footer></app-footer>
