--- a/src/app/components/fab/fab.component.html
+++ b/src/app/components/fab/fab.component.html
@@ -1,5 +1,5 @@
-<ion-fab *ngIf="showFab" vertical="top" horizontal="start">
-  <ion-fab-button routerLink="/roy" routerDirection="root" class="blur">
+<ion-fab *ngIf="showFab" vertical="bottom" horizontal="end">
+  <ion-fab-button [routerLink]="'/roy'" routerDirection="root">
     <div class="fapBtn">&nbsp;</div>
   </ion-fab-button>
 </ion-fab>
