--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -16,7 +16,7 @@
       <span item-right>שבט שלם סניף מרכז, באר שבע</span>
     </ion-item>
     <ion-item button detail (click)="rateUs()">
-      <ion-icon slot="start" name="mail" color="secondary"></ion-icon>
+      <ion-icon slot="start" name="star" color="secondary"></ion-icon>
       <ion-label>דרגו אותנו</ion-label>
     </ion-item>
     <ion-item>
